// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`render > should accept svelte v4 component options 1`] = `
<body>
  <div>
    <h1
      data-testid="test"
    >
      Hello 
      World
      !
    </h1>
     
    <div>
      we have context
    </div>
     
    <button>
      Button
    </button>
    <div />
  </div>
</body>
`;

exports[`render > should accept svelte v5 component options 1`] = `
<body>
  
  
  
  <section>
    <h1
      data-testid="test"
    >
      Hello World!
    </h1>
     
    <div>
      we have context
    </div>
     
    <button>
      Button
    </button>
    
  </section>
</body>
`;
